# nubo

./: .gitignore  LICENSE.md  README.md  docs_requirements.txt  pyproject.toml  requirements.txt  setup.py
docs/: CNAME  acquisition_functions.rst  asynchronous_bo.ipynb  bayesian_gp.ipynb  bayesian_optimisation.md  bayesian_optimisation.rst  citation.md  citation.rst  conf.py  constrained_bo.ipynb  custom_gp.ipynb  custom_gp.rst  fixed_noise.ipynb  get_started.ipynb  get_started.rst  index.rst  mixed_parameters.ipynb  multipoint_joint.ipynb  multipoint_sequential.ipynb  nubo.acquisition.rst  nubo.models.rst  nubo.optimisation.rst  nubo.rst  nubo.test_functions.rst  nubo.utils.rst  overview.rst  practical_considerations.rst  singlepoint.ipynb  surrogate_models.rst
docs/_source/: asynchronous_bo.ipynb  basic_optimisation.ipynb  bayesian_optimisation.rst  (+21 more)
examples/: asynchronous_bo.ipynb  autograd_example.py  autograd_multistart_example.py  bayesian_gp.ipynb  bayesian_gp.py  constrained_bo.ipynb  constrained_bo.py  custom_gp.ipynb  custom_gp.rst  fixed_noise.ipynb  get_started.ipynb  mcmc.py  mcmc_batched.py  mcmc_batched_adam.py  mcmc_batched_joint.py  mixed_parameters.ipynb  multipoint_fixed.ipynb  multipoint_joint.ipynb  multipoint_joint.py  multipoint_sequential.ipynb  multipoint_sequential.py  multistart_example.py  simple_example.py  singlepoint.ipynb  singlepoint.py  test.py
nubo/: __init__.py
plots/: ei.ipynb  gp.ipynb  toy_function.py  ucb.ipynb
tests/: test.py  test_acquisition.py  test_models.py  test_optimisation.py  test_test_functions.py  test_utils.py
(+205 files in other folders)
